--- a/JW.ipynb
+++ b/JW.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ/FWrRIsF3HJYg3By96QN",
+      "authorship_tag": "ABX9TyMHtI7gOYi3Y6+h2U3//oKw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,19 +48,19 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "from os import environ\n",
-        "from dotenv import load_dotenv\n",
+        "from os import environ from dotenv import load_dotenv\n",
         "\n",
         "load_dotenv()\n",
         "\n",
-        "OPENAI_API_KEY = environ[\"OPENAI_API_KEY\"]\n",
-        "\n"
+        "OPENAI_API_KEY = environ[\"OPENAI_API_KEY\"]"
       ],
       "metadata": {
-        "id": "hEnh04TbUxUT"
-      }
+        "id": "MBebwqCblW3I"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -115,46 +115,18 @@
     {
       "cell_type": "code",
       "source": [
-        "try:\n",
-        "    storage_context = StorageContext.from_defaults(\n",
-        "        persist_dir=\"./storage/lyft\"\n",
-        "    )\n",
-        "    lyft_index = load_index_from_storage(storage_context)\n",
-        "\n",
-        "    storage_context = StorageContext.from_defaults(\n",
-        "        persist_dir=\"./storage/uber\"\n",
-        "    )\n",
-        "    uber_index = load_index_from_storage(storage_context)\n",
-        "\n",
-        "    index_loaded = True\n",
-        "except:\n",
-        "    index_loaded = False"
-      ],
-      "metadata": {
-        "id": "0WHH0vqiVjZm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "if not index_loaded:\n",
-        "    # load data\n",
-        "    lyft_docs = SimpleDirectoryReader(\n",
-        "        input_files=[\"./10k/lyft_2021.pdf\"]\n",
-        "    ).load_data()\n",
-        "    uber_docs = SimpleDirectoryReader(\n",
-        "        input_files=[\"./10k/uber_2021.pdf\"]\n",
+        "# load data\n",
+        "user0_docs = SimpleDirectoryReader(\n",
+        "    input_files=[\"./dataset/user0/\"]\n",
         "    ).load_data()\n",
         "\n",
-        "    # build index\n",
-        "    lyft_index = VectorStoreIndex.from_documents(lyft_docs, show_progress=True)\n",
-        "    uber_index = VectorStoreIndex.from_documents(uber_docs, swow_progress=True)\n",
+        "# build index\n",
+        "user_docs_index = VectorStoreIndex.from_documents(user0_docs, show_progress=True)\n",
         "\n",
-        "    # persist index\n",
-        "    lyft_index.storage_context.persist(persist_dir=\"./storage/lyft\")\n",
-        "    uber_index.storage_context.persist(persist_dir=\"./storage/uber\")"
+        "\n",
+        "# persist index, JWTODO, do this later\n",
+        "#lyft_index.storage_context.persist(persist_dir=\"./storage/lyft\")\n",
+        "#uber_index.storage_context.persist(persist_dir=\"./storage/uber\")"
       ],
       "metadata": {
         "id": "D_mh3HUAVpTH"
@@ -165,8 +137,7 @@
     {
       "cell_type": "code",
       "source": [
-        "lyft_engine = lyft_index.as_query_engine(similarity_top_k=3, llm=llm)\n",
-        "uber_engine = uber_index.as_query_engine(similarity_top_k=3, llm=llm)"
+        "user0_engine = user0_docs_index.as_query_engine(similarity_top_k=3, llm=llm)"
       ],
       "metadata": {
         "id": "DCSCScnqVvnf"
@@ -179,22 +150,11 @@
       "source": [
         "query_engine_tools = [\n",
         "    QueryEngineTool(\n",
-        "        query_engine=lyft_engine,\n",
+        "        query_engine=user0_engine,\n",
         "        metadata=ToolMetadata(\n",
-        "            name=\"lyft_10k\",\n",
+        "            name=\"user0_cover_letter\",\n",
         "            description=(\n",
-        "                \"Provides information about Lyft financials for year 2021. \"\n",
-        "                \"Use a detailed plain text question as input to the tool.\"\n",
-        "            ),\n",
-        "        ),\n",
-        "    ),\n",
-        "    QueryEngineTool(\n",
-        "        query_engine=uber_engine,\n",
-        "        metadata=ToolMetadata(\n",
-        "            name=\"uber_10k\",\n",
-        "            description=(\n",
-        "                \"Provides information about Uber financials for year 2021. \"\n",
-        "                \"Use a detailed plain text question as input to the tool.\"\n",
+        "                \"build a cover letter from user profile and job position.\"\n",
         "            ),\n",
         "        ),\n",
         "    ),\n",
@@ -225,7 +185,7 @@
     {
       "cell_type": "code",
       "source": [
-        "response = agent.chat(\"Who had more profit in 2021, Lyft or Uber?\")\n",
+        "response = agent.chat(\"Could you build a cover letter that presents a strong case on why the applicant is a good candidate for the position?\")\n",
         "print(str(response))"
       ],
       "metadata": {
