--- a/JW.ipynb
+++ b/JW.ipynb
@@ -871,14 +871,9 @@
         "\"\"\"\n",
         "try:\n",
         "    storage_context = StorageContext.from_defaults(\n",
-        "        persist_dir=\"./storage/lyft\"\n",
+        "        persist_dir=\"./content/job_hack/storage/user0\"\n",
         "    )\n",
-        "    lyft_index = load_index_from_storage(storage_context)\n",
-        "\n",
-        "    storage_context = StorageContext.from_defaults(\n",
-        "        persist_dir=\"./storage/uber\"\n",
-        "    )\n",
-        "    uber_index = load_index_from_storage(storage_context)\n",
+        "    user_docs_index = load_index_from_storage(storage_context)\n",
         "\n",
         "    index_loaded = True\n",
         "except:\n",
@@ -903,9 +898,8 @@
         "# build index\n",
         "user_docs_index = VectorStoreIndex.from_documents(user0_docs, show_progress=True)\n",
         "\n",
-        "\n",
-        "# persist index, use username for storage? TODO: get username\n",
-        "#user_docs_index.storage_context.persist(persist_dir=\"./content/job_hack/storage/user0\")\n"
+        "  # persist index, use username for storage? TODO: get username\n",
+        "  #user_docs_index.storage_context.persist(persist_dir=\"./content/job_hack/storage/user0\")\n"
       ],
       "metadata": {
         "id": "D_mh3HUAVpTH",
